// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[InterceptList] should match empty snapshot 1`] = `
<div>
  <div
    class="flex flex-col "
    id="intercept-list"
  >
    <div
      class="flex select-none justify-between bg-slate-100 p-1"
    >
      <span
        class="font-bold"
      >
        Intercepts
      </span>
      <button
        class="self-stretch"
        title="Add intercept"
      >
        <svg
          class="h-full w-auto"
        />
      </button>
    </div>
    <div
      class="flex flex-col overflow-y-auto"
    />
  </div>
</div>
`;

exports[`[InterceptList] should match snapshots after clicking buttons 1`] = `
<div>
  <div
    class="flex flex-col "
    id="intercept-list"
  >
    <div
      class="flex select-none justify-between bg-slate-100 p-1"
    >
      <span
        class="font-bold"
      >
        Intercepts
      </span>
      <button
        class="self-stretch"
        title="Add intercept"
      >
        <svg
          class="h-full w-auto"
        />
      </button>
    </div>
    <div
      class="flex flex-col overflow-y-auto"
    >
      <div
        class="flex w-full select-none justify-between p-1 "
      >
        <div
          class="flex items-center space-x-1 overflow-hidden"
        >
          <input
            checked=""
            type="checkbox"
          />
          <span
            class="overflow-hidden text-ellipsis whitespace-nowrap"
          />
        </div>
        <button
          class="self-stretch"
          title="Delete intercept"
        >
          <svg
            class="h-full w-auto"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`[InterceptList] should match snapshots after clicking buttons 2`] = `
<div>
  <div
    class="flex flex-col "
    id="intercept-list"
  >
    <div
      class="flex select-none justify-between bg-slate-100 p-1"
    >
      <span
        class="font-bold"
      >
        Intercepts
      </span>
      <button
        class="self-stretch"
        title="Add intercept"
      >
        <svg
          class="h-full w-auto"
        />
      </button>
    </div>
    <div
      class="flex flex-col overflow-y-auto"
    />
  </div>
</div>
`;
